# GateKeeper

./: .gitignore  .gitmodules  CMakeLists.txt  readme.md
app/: CMakeLists.txt  main.cpp
include/: export.hpp  gatekeeper.hpp
src/: CMakeLists.txt  checker.cpp  checker.hpp  gatekeeper.cpp  internal_config.hpp  resource.hpp
test/: CMakeLists.txt  gatekeeper_test.cpp
